after login reload current URL,setup new system UI

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -39,6 +39,7 @@
 		
 		var webTemplateCache = "{{webTemplateCache}}" === "true";
 		var hasB2Bfeatures = "{{hasB2Bfeatures}}" === "true";
+		var systemDbReady = "{{systemDbReady}}" === "true";
 		var dataApiCache = "{{dataApiCache}}" === "true";
 		
 		var industryDataModels = '{{industryDataModels}}'.split(",");
