improve the flow setup new system,  UI profile

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -25,7 +25,7 @@
      </div>
 </div>
 
-<div class="container-fluid" id="data_model_holder" >
+<div class="container-fluid row" id="data_model_holder" >
 
        <!-- MAIN BODY here -->
        
