--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -42,6 +42,9 @@
 	ol.profile_ext_data {
 		margin-left: 28px;
 	}
+	#profile_info_tabs {
+		margin-top: 15px;
+	}
 </style>
 
 <div class="row">
@@ -64,7 +67,7 @@
      </div>
 </div>
 
-<div class="container-fluid" id="data_model_holder" >
+<div class="container-fluid row" id="data_model_holder" >
 
        <!-- MAIN BODY here -->
 
@@ -252,7 +255,7 @@
 	   </ul>
 
 	   <!-- Tab Contents  -->
-       <div class="tab-content" id="profile_ext_data_tabs" style="min-height: 630px;"  >
+       <div class="tab-content" id="profile_ext_data_tabs" style="min-height: 630px"  >
 
 			<!-- tab 1 Activity Flow  -->
 			<div class="tab-pane active" id="panel_behavioral_Data" >
