--- a/resources/app-templates/leocdp-admin/setup.html
+++ b/resources/app-templates/leocdp-admin/setup.html
@@ -17,15 +17,10 @@
                             <h1>LEO CDP - Setup New System</h1>
                         </div>
 						<hr>
-						
+						<div class="alert alert-info" role="alert">Please enter the superadmin password and click OK button</div>
 						<div id="system_user_login_form" >
 	                        <div class="form-group">
-	                            <input type="text" class="form-control" placeholder="Enter username" name="username" id="username" value="superadmin"
-	                                disabled="disabled">
-	                        </div>
-	                        <div class="alert alert-info" role="alert">Please enter the superadmin password</div>
-	                        <div class="form-group">
-	                            <label> Password for superadmin</label>
+	                            <label> Password for superadmin </label>
 	                            <input type="password" class="form-control" placeholder="Enter superadmin password" name="password" id="password"
 	                                 autocapitalize="off" autocomplete="off">
 	                        </div>
@@ -36,7 +31,7 @@
 
                         <div class="form-group text-left">
                             <button type="button" class="btn btn-success" id="btn_system_setup" style="width: 220px"> 
-								<i class="fa fa-check-square-o" aria-hidden="true"></i> OK to setup New System 
+								<i class="fa fa-check-square-o" aria-hidden="true"></i> OK to setup new system 
 							</button>
                         </div>
                     </fieldset>
