--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -148,8 +148,8 @@
 	                <thead>
 	                    <tr>
 	                        <th class="text-center" title="A profile that has mobile phone or email">Contact</th>
-	                        <th >Name</th>
-	                        <th >Last-seen Touchpoint</th>
+	                        <th class="text-center">Name</th>
+	                        <th class="text-center">Last-seen Touchpoint</th>
 	                        <th class="text-center">Data Quality</th>
 	                        <th class="text-center">Lead Score</th>
 	                        <th class="text-center">CLV Score</th>
