--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -1364,7 +1364,7 @@
         		 data.fullName = data.firstName +  " " + data.lastName;
         	 }
         	 else {
-        		 data.fullName = "Anonymous Person";
+        		 data.fullName = "Web Visitor";
         	 }
         	 
         	 if(data.age <= 0){
