--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -165,15 +165,16 @@
 						 	<table id="profile_list_querybuilder" class="display" style="width:100%;">
 						    	<thead>
 						        	<tr>
-							            <th>Full Name</th>
-							            <th>Age</th>
-							            <th>Gender</th>
-							            <th>Primary Email</th>
+							            <th >Full Name</th>					            
+							            <th class="text-center">Contact Type</th>
+							            <th >Gender</th>
+							            <th class="text-center">Email</th>
+							            <th class="text-center">Phone</th>
+							            <th >Last-seen Touchpoint</th>
 							            <th class="text-center">Data Quality</th>
 							            <th class="text-center">Lead Score</th>
 							            <th class="text-center">CLV Score</th>
-							            <th>Last Updated at</th>
-							            <th>Last-seen Touchpoint</th>
+							            <th class="text-center">Last Updated at</th>
 						        	</tr>
 						    	</thead>
 						 	</table>
