multi data journey map for customer profile

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -120,7 +120,7 @@
 	<script src="https://{{baseStaticUrl}}/js/d3libs/d3-funnel.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/d3libs/venn.min.js?_={{cacheBustingKey}}"></script>
 	
-	<!-- User friendly query/filter creator -->
+	<!-- Visual Query Builder -->
 	<link href="https://{{baseStaticUrl}}/js/query-builder/query-builder.default.min.css" rel="stylesheet" type="text/css" />
 	<script src="https://{{baseStaticUrl}}/js/query-builder/query-builder.standalone.min.js"></script>
 	
@@ -181,6 +181,11 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" type="text/css" rel="stylesheet" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" type="text/css" rel="stylesheet" />
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
+	
+	<!-- FunnelGraph.js  -->
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/theme.css">
+	<script src="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/js/funnel-graph.min.js"></script>
 	
 	<!-- Web-socket  -->
 	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
@@ -259,6 +264,8 @@
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.functions.js?admin=1&_={{cacheBustingKey}}"></script>
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.core-admin.js?admin=1&_={{cacheBustingKey}}"></script>
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.visualization.js?admin=1&_={{cacheBustingKey}}"></script>
+	
+	<!-- Journey Map  -->
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.journey.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<!-- asset: group-details  -->
