--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -78,34 +78,34 @@
 				 	Unified Analytics Hub <i id="data_analytics_hub_collapse_icon" class="fa fa-fw fa-caret-down"> </i>
 				</a>
 				<ul id="analytics_hub_menu" class="collapse in" aria-expanded="true">
-					<li id="Funnel_Data_Dashboard_Menu" >
-						<a id="Funnel_Data_Dashboard" href="#calljs-leoCdpRouter('Funnel_Data_Dashboard')" title="Main Data Analytics Dashboard" > 
-							<i class="fa fa-fw fa-filter"></i> Funnel Data Dashboard </a>
+					<li id="Customer_Data_Report_Menu" >
+						<a id="Customer_Data_Report" href="#calljs-leoCdpRouter('Customer_Data_Report')" title="Customer Data Report" > 
+							<i class="fa fa-fw fa-filter"></i> Customer Data Report </a>
 					</li>
 					<li>
-						<a id="Event_Data_Dashboard" href="#calljs-leoCdpRouter('Event_Data_Dashboard')" title="Event Data Dashboard" > 
-							<i class="fa fa-fw fa-line-chart"></i> Event Data Dashboard </a>
+						<a id="Event_Data_Report" href="#calljs-leoCdpRouter('Event_Data_Report')" title="Event Data Report" > 
+							<i class="fa fa-fw fa-bar-chart"></i> Event Data Report </a>
 					</li>
 					<li>
-						<a id="CX_Data_Dashboard" href="#calljs-leoCdpRouter('CX_Data_Dashboard')" title="CX Data Dashboard"  > 
-							<i class="fa fa-fw fa-tachometer"></i> CX Data Dashboard </a>
+						<a id="CX_Data_Report" href="#calljs-leoCdpRouter('CX_Data_Report')" title="CX Data Report"  > 
+							<i class="fa fa-fw fa-tachometer"></i> CX Data Report </a>
 					</li>
 				</ul>
 			</li>
 		
-			<!--  2 - Journey Data Hub   -->
+			<!--  2 - Data Journey Hub   -->
 			<li id="nav_journey_hub" style="display: none;" data-system-user-roles="0,2,4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#journey_hub_menu"> <i class="fa fa-fw fa-map"></i>
-				 	Journey Data Hub <i id="journey_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+				 	Data Journey Hub <i id="journey_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
-				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">
-					<li>
-						<a id="Data_Flow_Management" href="#calljs-leoCdpRouter('Data_Flow_Management')" title="Data Flow Management"> 
-							<i class="fa fa-fw fa-map-o"></i> Data Flow Management </a>
+				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">					
+					<li id="Event_Data_Funnel_Menu" >
+						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Event_Data_Funnel')" title="Event Data Funnel Management" >
+							<i class="fa fa-fw fa-filter"></i> Event Data Funnel </a>
 					</li>
-					<li id="Event_Data_Management_Menu" >
-						<a id="Event_Data_Management" href="#calljs-leoCdpRouter('Event_Data_Management')" title="Journey Data Funnel" >
-							<i class="fa fa-fw fa-filter"></i> Event Data Management </a>
+					<li>
+						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" title="Data Journey Map Management"> 
+							<i class="fa fa-fw fa-map-o"></i> Data Journey Map </a>
 					</li>
 				</ul>
 			</li>
