--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
@@ -308,7 +308,7 @@
 	
 			    fields: [
 			    	{ name: "journeyStage", type: "select", title : "Journey Stage", items: journeyStages, align: 'center', width: 70, valueField: "id", textField: "name" },
-			    	{ name: "funnelStageId", title : "Funnel Stage", type: "select", items: customerFunnelStages, valueField: "id", textField: "name" },
+			    	{ name: "funnelStageId", title : "Default Funnel Stage", type: "select", items: customerFunnelStages, valueField: "id", textField: "name" },
 			        { name: "eventName", title : "Event Name", align: 'center' , type: "text", validate: "required", validate: "required" },
 			        { name: "eventLabel", title : "Event Label", align: 'center' , type: "text", validate: "required" },			        
 			        { name: "scoreModel", title : "Scoring Model", type: "select", items: scoringModels, width: 80, valueField: "id", textField: "name" },
