--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -52,7 +52,7 @@
 	}
 	.funnel-stage {
 		float: left;
-		width: 11.11%!important;
+		width: 10%!important;
 		margin-top:10px;
 		border-right: 1px solid black;
 		height: 36px;
@@ -294,9 +294,9 @@
 				        				<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" > </select>
 				        			</div>
 				        		</div>
-				        		<div class="" > 
+				        		<div class="col-ld-12" > 
 				        			<label class="col-ld-12" > Journey Progress <span class="data_field" >Sentiment Score: <span id="profileJourneySentimentScore">0</span></span> </label> 
-				        			<div class="col-md-12 funnel-flow" id="profile_funnel_report" >
+				        			<div class="funnel-flow" id="profile_funnel_report" >
 				               			<div class="funnel-stage" id="profile_funnel_stage_1" >
 				               				New Visitor
 				               			</div>
@@ -324,8 +324,11 @@
 				               			<div class="funnel-stage" id="profile_funnel_stage_9" >
 				               				Unhappy Customer
 				               			</div>
+				               			<div class="funnel-stage" id="profile_funnel_stage_10" >
+				               				Terminated Customer
+				               			</div>
 				               		</div>
-				               		<div class="progress col-ld-12" style="text-transform: uppercase;font-weight: bold;width: 99%!important;" >
+				               		<div class="progress" style="text-transform: uppercase; font-weight: bold; width: 100%!important;" >
 									  	<div id="profileJourneyFunnel" class="progress-bar progress-bar-striped active" role="progressbar"
 									  				aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%" >
 									    	<span id="profileJourneyFunnelValue" >0</span> % journey
