add showInObserverJS in EventMetric

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
@@ -314,6 +314,7 @@
 			        { name: "scoreModel", title : "Scoring Model", type: "select", items: scoringModels, width: 80, valueField: "id", textField: "name" },
 			        { name: "score", title : "Event Score", type: "number", align: 'center', width: 40, validate: "required" },
 			        { name: "cumulativePoint", title : "Loyalty Point", type: "number", width: 44, align: 'center', validate: "required" },
+			        { name: "showInObserverJS", title : "Show in ObserverJS", type: "CustomCheckBox", width: 50, align: "center" },
 			        gridControls
 			    ]
 			});  
