update and fix bugs

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -85,7 +85,7 @@
           	<li ><a href="javascript:" data-target-tab="panel_profile_education" > <i class="fa fa-graduation-cap" aria-hidden="true"></i> Education </a></li>
           	<li ><a href="javascript:" data-target-tab="panel_profile_work" > <i class="fa fa-briefcase" aria-hidden="true"></i> Work Info </a></li>
           	<li ><a href="javascript:" data-target-tab="panel_profile_marketing" > <i class="fa fa-info-circle" aria-hidden="true"></i> Marketing Info </a></li>
-          	<li ><a href="javascript:" data-target-tab="panel_profile_salesources" > <i class="fa fa-info-circle" aria-hidden="true"></i> Sale Sources </a></li>
+          	<li ><a href="javascript:" data-target-tab="panel_profile_salesources" > <i class="fa fa-info-circle" aria-hidden="true"></i> Sales Sources </a></li>
           	<li ><a href="javascript:" data-target-tab="panel_profile_custom" > <i class="fa fa-table" aria-hidden="true"></i> Custom </a></li>
           	<li ><a href="javascript:" data-target-tab="panel_profile_data_authorization" > <i class="fa fa-lock" aria-hidden="true"></i> Authorization </a></li>
 	   </ul>
@@ -491,16 +491,16 @@
                </table>
 			</div>
 			
-			<!-- tab 8 Sale Sources  -->
+			<!-- tab 8 Sales Sources  -->
 			<div class="tab-pane" id="panel_profile_salesources" >
-				<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Sale Sources </h4>
+				<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Sales Sources </h4>
 				
 			    <table border=0 class="underlined" style="width: 100%;">
                    <tr>
                        <td>
 							<ol class="profile_ext_data" data-field="personal_attributes">
 				               	<li>
-				                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Sale Agencies </b> 
+				                   <b data-persona="key" > <i class="fa fa-fw fa-users"></i> List of Sales Agency </b> 
 				                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('saleAgencies')" title="Add new"  > 
 				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> New Value 
 				    			   </button>
@@ -508,7 +508,7 @@
 				               	</li>
 				               	
 				               	<li>
-				                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Sale Agents </b> 
+				                   <b data-persona="key" > <i class="fa fa-fw fa-user"></i> List of Salesperson </b> 
 				                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('saleAgents')" title="Add new"  > 
 				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> New Value 
 				    			   </button>
