--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -932,11 +932,11 @@
 				                       <td>
 											<ol class="profile_ext_data" >
 												<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Sale Agencies </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> List of Sale Agency </b> 
 								                   <p data-field="saleAgencies" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Sale Agents </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> List of Sale Person </b> 
 								                   <p data-field="saleAgents" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
 								               	</li>
 							               	</ol>
