--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -171,7 +171,7 @@
 
 <script>
 	//select date
-	var journeyMapIdToReport = "id_default_journey"; 
+	var journeyMapIdToReport = ""; 
     var initPrimaryDashboard = function () {
     	setupTabPanels();
     	updateProfileChartWrapper();		
