--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -10,8 +10,10 @@
 .observer_id {
 	font-size: 11px;
     font-weight: bold;
-    color: #3300ff;
     padding: 10px;
+}
+.observer_url a {
+    color: #3300ff!important;
 }
 .observer_name, .touchpoint_hub_name {
 	color: #3300ff;
